2004-01-06 01:12 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: [GormDocument attachObject:] added logic
	to automatically add predefined connections to the connectors
	array so that they can be manipulated in Gorm.  If a palette
	defines the destination to be the First Responder, 
	and the label to be "orderFrontStandardInfoPanel:" then this
	will be reflected in the connections inspector.
	* GormLib/IBConnectors.h: Made the comments into documentation
	style comments so, if/when I start using gsdoc to document the
	innerworkings of Gorm, it will be ready.
	
2004-01-04 22:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Made -[GormDocument _identifierString:],
	-[GormDocument _formatAction:], and 
	-[GormDocument _formatAction:] into
	+[GormDocument identifierString:],
	+[GormDocument formatAction:], and 
	+[GormDocument formatAction:] so that they can be used
	in other classes which need to format actions/outlets.
	* GormDocument.h: Added declarations for the new class methods.
	* GormInspectorsManager.m: Use the new methods to prevent
	user from entering a bad name for an outlet or action.
	
2004-01-04 20:32 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInspectorsManager.m: Added back some code to make the display
	of the title of the inspector more informative when editing a class.
	The title now reads: "Class Edit Inspector: {className}".  This code
	had been commented out a while back.

2004-01-03 02:08 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassInspector.m: Minor correction to -removeAction: and
	-removeOutlet: to prevent an exception being raised when 
	performing remove when there are not outlets/actions in the
	list.
	
2004-01-01 00:13 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: More usability changes to grey out menu items which
	can't/shouldn't be invoked.
	
2003-12-31 20:33 Gregory John Casamento <greg_casamento@yahoo.com>
